font visibility fixed

--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -18,16 +18,16 @@
 }
 
 @font-face {
-  font-family: 'Poppins';
+  font-family: 'Roboto';
   font-style: normal;
-  font-weight: 200;
+  font-weight: 300;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiByp8kv8JHgFVrLFj_Z1xlFd2JQEk.woff2) format('woff2');
+  src: url(https://fonts.gstatic.com/s/roboto/v27/KFOlCnqEu92Fr1MmSU5fBBc4AMP6lQ.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 
-$mont-text: "Poppins";
+$mont-text: "Roboto";
 $header-text: 'Teko';
 
 // SCSS
